<resources>
    <!--Common-->
    <string name="app_name">Campus Expense Manager</string>

    <!--InitializationFragment-->
    <string name="initialization_connecting">Connecting to local database…</string>
    <string name="initialization_error">Connection to local database failed.</string>
    <string name="initialization_done">Done!</string>

    <!--LoginFragment-->
    <string name="login_button_login">Login</string>
    <string name="login_button_signup">Sign up</string>
    <string name="login_button_forgot">Forgot password?</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_remember">Remember me</string>
    <string name="login_error_unknown">Unknown error</string>
    <string name="login_error_empty">Username and password must not be empty</string>
    <string name="login_error_invalid">Invalid username or password</string>
    <string name="login_error_notfound">Username not found</string>
    <string name="login_success">Login successful</string>
    <string name="login_signup_exists">Username already exists</string>
    <string name="login_signup_password_length">Password must be at least 6 digits</string>
    <string name="login_signup_failed">Sign up failed</string>
    <string name="login_signup_success">Sign up successful. Please login.</string>

    <!--CategoryFragment-->
    <string name="category_add_bottom_sheet_title">New Category</string>
    <string name="category_edit_bottom_sheet_title">Edit Category</string>
    <string name="category_bottom_sheet_name_hint">Category name</string>
    <string name="category_bottom_sheet_description_hint">Category description</string>
    <string name="category_bottom_sheet_add">Add</string>
    <string name="category_bottom_sheet_save">Save</string>

    <!--ExpenseFragment-->
    <string name="expenses_tab_overview">Overview</string>
    <string name="expenses_tab_history">History</string>
    <string name="expenses_tab_statistics">Statistics</string>

    <string name="expense_overview_summary">Summary</string>
    <string name="expense_overview_summary_no_budget">No budget</string>
    <string name="expense_overview_summary_amount">Spent: %s / %s</string>

    <string name="expense_overview_last_3_expenses">Last 3 expenses</string>

    <string name="expense_add_bottom_sheet_title">New Expense</string>
    <string name="expense_edit_bottom_sheet_title">Edit Expense</string>
    <string name="expense_bottom_sheet_name_hint">Expense name</string>
    <string name="expense_bottom_sheet_amount_hint">Expense amount</string>
    <string name="expense_bottom_sheet_category_hint">Expense category</string>
    <string name="expense_add_bottom_sheet_add">Add</string>
    <string name="expense_edit_bottom_sheet_save">Save</string>
    <string name="expense_bottom_sheet_category_not_specified">not specified</string>

    <!--BudgetFragment-->
    <string name="budget_add_bottom_sheet_title">Add Budget</string>
    <string name="budget_add_bottom_sheet_add">Add</string>
    <string name="budget_edit_bottom_sheet_title">Edit Budget</string>
    <string name="budget_edit_bottom_sheet_edit">Edit</string>
    <string name="budget_bottom_sheet_name_hint">Budget name</string>
    <string name="budget_bottom_sheet_amount_hint">Budget amount</string>
    <string name="budget_bottom_sheet_start_date_hint">Start date </string>
    <string name="budget_bottom_sheet_end_date_hint">End date</string>

    <string name="budget_card_spent">Spent: %,.2f %s</string>
    <string name="budget_card_total">Total: %,.2f %s</string>
    <string name="budget_card_from">From: %s</string>
    <string name="budget_card_end">To: %s</string>
    <string name="budget_past">Past</string>
    <string name="budget_current">Current</string>
    <string name="budget_future">Future</string>

    <!--SettingsFragment-->
    <string name="settings_language">Language</string>
    <string name="settings_dark_theme">Dark theme</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_finger_print">Fingerprint lock</string>
    <string name="settings_language_en">English</string>
    <string name="settings_hint">If the option is greyed out, it is not available on your device</string>

    <!--Dialog-->
    <string name="dialog_exit">Do you want to exit?</string>
    <string name="dialog_create_account">Do you want to create account \'%s\'?</string>
    <string name="dialog_delete_category">Do you want to delete category \'%s\'?</string>
    <string name="dialog_delete_expense">Do you want to delete expense?</string>
    <string name="dialog_delete_budget">Do you want to delete budget \'%s\'?</string>
    <string name="dialog_logout">Do you want to logout?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <!--Navigation Drawer-->
    <string name="navigation_home">Home</string>
    <string name="navigation_expenses">Expenses</string>
    <string name="navigation_budget">Budget</string>
    <string name="navigation_categories">Categories</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_logout">Logout</string>
</resources>