<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/expenses_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/expenses_tab_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_overview"
                android:text="@string/expenses_tab_overview" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/expenses_tab_history"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_history"
                android:text="@string/expenses_tab_history" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/expenses_tab_statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_analytics"
                android:text="@string/expenses_tab_statistics" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/expenses_view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</layout>